# Weather

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
wix/: main.wxs
