[package]
name = "weather-rs"
version = "1.1.0"
edition = "2021"
authors = ["Clay66"]
description = "A CLI weather application"
keywords = ["cli", "weather", "openweathermap"]
categories = ["command-line-utilities"]
repository = "https://github.com/Clay-6/Weather-Rs"
license = "GPL-3.0"

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
confy = "0.5.1"
public-ip = "0.2.2"
geolocation = "0.2.1"
reqwest = {version = "0.11.10", features = ["json"]}
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
tokio = {version = "1", features = ["full"]}
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }

